# mzi

./: .gitignore  .gitignore.txt  README.md  diagnose_dpi.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  test-dynamic-components.py  test-mirror-configurations-py.py  test_resize_screenshots.py  test_waveoptics.py
.github/workflows/: ci.yml
assets/: assets_readme_complete.md  sound-assets-readme.md
assets/sounds/: remove-converted-suffix.py  (+1 more)
components/: __init__.py  base.py  beam_splitter.py  detector.py  flat_mirror.py  laser.py  mirror.py  partial_mirror.py  tunable_beamsplitter.py
config/: __init__.py  blocked_fields.txt  blocked_fields_maze.txt  blocked_fields_template.txt  challenges.json  example_blocked_fields.txt  example_challenges_json.json  gold_challenge_config.txt  gold_fields.txt  gold_fields_maze.txt  gold_fields_treasure.txt  settings.py
core/: __init__.py  beam_renderer.py  challenge_manager.py  component_manager.py  debug_display.py  fock.py  game.py  grid.py  interferometer_presets.bak.py  interferometer_presets.py  keyboard_handler.py  leaderboard.py  packet_renderer.py  physics.py  quantum_packet.py  sound_manager.py  test_utilities.py  waveoptics.py
tests/: conftest.py  test_components.py  test_conservation.py  test_fock_integration.py  test_leaderboard.py  test_vector.py  test_waveoptics.py
ui/: __init__.py  controls.py  effects.py  leaderboard_display.py  right_panel.py  sidebar.py
utils/: __init__.py  assets_loader.py  colors.py  emoji_support.py  energy_checker.py  vector.py
