[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mzi"
version = "1.0.0"
description = "An educational game for learning quantum optics by building a Mach-Zehnder interferometer."
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.2,<3.0.0",
    "numpy>=1.24.3,<3.0.0",
]

[project.scripts]
mzi = "main:main"
